project(Project)
add_executable(Project Project.cpp heightMapGen_vshader.glsl heightMapGen_gshader.glsl heightMapGen_fshader.glsl vshader2.glsl fshader2.glsl gshader2.glsl)
target_link_libraries(Project ${COMMON_LIBS})
target_stringify_shader(Project heightMapGen_vshader)
target_stringify_shader(Project heightMapGen_gshader) 
target_stringify_shader(Project heightMapGen_fshader)
target_stringify_shader(Project vshader2)
target_stringify_shader(Project gshader2) 
target_stringify_shader(Project fshader2)

