project(Project)
add_executable(Project Project.cpp vHeightMap2D.glsl vHeightMap3D.glsl fHeightMap2D.glsl fHeightMap3D.glsl vShader2D.glsl vShader3D.glsl fShader2D.glsl fShader3D.glsl fSkyBox.glsl vSkyBox.glsl fSkyBoxTex.glsl vSkyBoxTex.glsl)
target_link_libraries(Project ${COMMON_LIBS})
target_stringify_shader(Project vHeightMap2D)
target_stringify_shader(Project vHeightMap3D) 
target_stringify_shader(Project fHeightMap2D)
target_stringify_shader(Project fHeightMap3D)
target_stringify_shader(Project vShader2D) 
target_stringify_shader(Project vShader3D)
target_stringify_shader(Project fShader2D)
target_stringify_shader(Project fShader3D)
target_stringify_shader(Project fSkyBox)
target_stringify_shader(Project vSkyBox)
target_stringify_shader(Project fSkyBoxTex)
target_stringify_shader(Project vSkyBoxTex)
target_deploy_file(Project rock.tga)
target_deploy_file(Project sand.tga)
target_deploy_file(Project grass.tga)
target_deploy_file(Project snow.tga)
target_deploy_file(Project skybox.tga)
